Fix CSS Modules build error - wrap universal selector in :global()

--- a/app/shop/[slug]/[product]/product.module.css
+++ b/app/shop/[slug]/[product]/product.module.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
 }
 
-* {
+.page :global(*) {
   box-sizing: border-box;
 }
 
